# router/app.go
@@ -21,5 +21,6 @@ func Router() *gin.Engine {
 	r.POST("/login", service.Login)
 	r.POST("/send-code", service.SendCode)
 	r.POST("/register", service.Register)
+	r.GET("/rank-list", service.GetRankList)
 	return r
 }
